Fix icon styling
Rather than giving them a margin-right, which means that the last icon
isn’t aligned with the right edge properly, give the icon container a
width and then distribute the children. Also, on the children spans,
set width: 0, otherwise the hide-text mixin doesn’t work as intended
(the text is shifted off-left), but the text still effects the
element’s width. Finally, clear out some old styles and pad the
resulting link targets.

--- a/stylesheets/all.sass
+++ b/stylesheets/all.sass
@@ -22,6 +22,14 @@ $border-radius-main: 4px
   margin: 0 auto
   padding: 0 $page-padding
 
+@mixin distribute-children()
+  text-align: justify
+
+  &:after
+    content: ''
+    display: inline-block
+    width: 100%
+
 body
   font-family: "Helvetica Neue", "Helvetica", "Open Sans", sans-serif
   font-size: 15px
@@ -215,20 +223,24 @@ footer
     margin-top: 0
     margin-bottom: 0
     line-height: 0
-    text-align: justify
-
-    &:after
-      content: ''
-      display: inline-block
-      width: 100%
+    +distribute-children
 
   span
     display: inline-block
     vertical-align: middle
 
-  .social-links span
-    +hide-text
-    margin: 0 10px
+  .social-links
+    +distribute-children
+    width: 9em
+
+    span
+      +hide-text
+      width: 0
+
+    // embiggen link targets
+    i
+      width: 1em
+      padding: .75em
 
 
 /** Content */
