--- a/stylesheets/fontello.css
+++ b/stylesheets/fontello.css
@@ -5,7 +5,6 @@
   src: url("../fonts/fontello.eot?60624967#iefix") format("embedded-opentype"), url("../fonts/fontello.woff?60624967") format("woff"), url("../fonts/fontello.ttf?60624967") format("truetype"), url("../fonts/fontello.svg?60624967#fontello") format("svg");
   font-weight: normal;
   font-style: normal; }
-
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
 /*
@@ -24,21 +23,12 @@
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .2em;
   text-align: center;
-  /* opacity: .8; */
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
   /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */ }
+  line-height: 1em; }
 
 .icon-search:before {
   content: '\e804'; }
